WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212153
REGRESSION (
r261892
) [ Mac Debug ] 4 API tests failing related to ResourceLoadStatistics
https://bugs.webkit.org/show_bug.cgi?id=212153
Summary
REGRESSION (r261892) [ Mac Debug ] 4 API tests failing related to ResourceLoa...
Truitt Savell
Reported
2020-05-20 10:11:39 PDT
after the changes in
https://trac.webkit.org/changeset/261892/webkit
This test is failing: TestWebKitAPI.ResourceLoadStatistics.MigrateDataFromMissingTopFrameUniqueRedirectSameSiteStrictTableSchema and these are timing out: TestWebKitAPI.ResourceLoadStatistics.NetworkProcessRestart TestWebKitAPI.ResourceLoadStatistics.ShouldNotGrandfatherOnStartupDatabase TestWebKitAPI.ResourceLoadStatistics.ShouldNotGrandfatherOnStartup Result output:
https://build.webkit.org/builders/Apple-Catalina-Debug-WK2-Tests/builds/4380/steps/run-api-tests/logs/stdio
Attachments
Patch
(1.99 KB, patch)
2020-05-20 10:42 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-05-20 10:12:06 PDT
<
rdar://problem/63452541
>
Truitt Savell
Comment 2
2020-05-20 10:17:49 PDT
It looks like this test is specifically broken on Mojave Debug: TestWebKitAPI.ResourceLoadStatistics.NoMessagesWhenNotTesting History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ResourceLoadStatistics.NoMessagesWhenNotTesting
Kate Cheney
Comment 3
2020-05-20 10:42:31 PDT
Created
attachment 399851
[details]
Patch
Kate Cheney
Comment 4
2020-05-20 10:45:47 PDT
I got a little too excited when deleting reset() calls in
https://trac.webkit.org/changeset/261892/webkit
. In this case it is needed because this statement is initialized in this function and does not use SQLiteStatementAutoResetScope, so it must be reset between iterations of the loop.
EWS
Comment 5
2020-05-20 11:37:51 PDT
Committed
r261935
: <
https://trac.webkit.org/changeset/261935
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399851
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug