REGRESSION (r261892) [ Mac Debug ] 4 API tests failing related to ResourceLoadStatistics https://bugs.webkit.org/show_bug.cgi?id=212153 <rdar://problem/63452541>

Reviewed by Sihui Liu.

Accidentally deleted necessary reset() call for a SQLite statement
when converting stored statements to SQLiteStatementAutoResetScope in
https://trac.webkit.org/changeset/261892/webkit.

This statement is used in a loop with multiple bind() calls so it must be reset.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::checkForMissingTablesInSchema):


Canonical link: https://commits.webkit.org/225021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261935 268f45cc-cd09-0410-ab3c-d52691b4dbfc